finishing video card

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-button {
+button,div {
   -webkit-tap-highlight-color: transparent;
 }
 
-button:active {
+button:active,
+div:active {
   -webkit-tap-highlight-color: transparent;
 }
